Swagger: add auth key for private route
